syntax = "proto3";

import "google/protobuf/any.proto";
import "taskSet.proto";

package opennms.rpc.task;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.grpc.task.contract";

message TaskRequest {
  string plugin_name = 1;
  opennms.taskset.Resilience resilience = 2;
  google.protobuf.Any configuration =  3;
}

message TaskResponse {
  opennms.taskset.MonitorResponse monitor_response = 1;
}
